2025-11-13T01:07:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19317067468 # 807
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-13
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 66 110 / 67 111
* notice: next accum: outdated-unq outdated-all / unq all: 67 111 / 68 112
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-28] / [2025-11-12]

2025-11-06T01:06:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19121404326 # 800
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 65 109 / 66 110
* notice: next accum: outdated-unq outdated-all / unq all: 66 110 / 67 111
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-16] / [2025-10-28]

2025-10-17T01:12:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18579332154 # 799
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-17
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 64 108 / 65 109
* notice: next accum: outdated-unq outdated-all / unq all: 65 109 / 66 110
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-14] / [2025-10-16]

2025-04-24T01:14:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14631271559 # 623