@@ -1,3 +1,12 @@
+2025-11-19T01:06:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19486057082 # 813
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-19
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 67 111 / 68 112
+* notice: next accum: outdated-unq outdated-all / unq all: 67 111 / 69 113
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-11-18]
+
 2025-11-13T01:07:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19317067468 # 807
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-13
